--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -1,11 +1,12 @@
 .hero-container {
     width: 100vw;
-
+    height: auto;
+    position: relative;
 }
 
 .hero-background-img {
     width: 100%;
-    height: auto;
+    height: 100%;
 
     position: absolute;
     z-index: -1;
